--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="./Fogli di stile/homepage.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <h1>Ciao</h1>
